Все херня памагити у меня отбрали паспартб

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
-    <string name="app_name">Demo2</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">КорТик</string>
+    <string name="action_settings">Настройки</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next_fragment_label">Next Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
+    <string name="first_fragment_label">КорТик</string>
+    <string name="second_fragment_label">КорТик</string>
+    <string name="next_fragment_label">КорТик</string>
+    <string name="next">Следующий</string>
+    <string name="previous">Предыдущий</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hello_next_fragment">Hello next fragment. Arg: %2$s</string>
